--- a/new.html
+++ b/new.html
@@ -2,6 +2,9 @@
 <html>
 <head> 
   <title>New</title>
-  <link rel="stylesheet" type="text/css" href="new-style.css"
+  <link rel="stylesheet" type="text/css" href="new-style.css">
 </head>
+<body>
+
+</body>
 </html>
