--- a/new.html
+++ b/new.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" type="text/css" href="new-style.css">
 </head>
 <body>
-  <h1 align="center"> The Chronicles of Amber </h1>
+  <h1 class="topheader"> The Chronicles of Amber </h1>
 </body>
 </html>
