--- a/new.html
+++ b/new.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <h1 class="topheader"> The Chronicles of Amber </h1>
+  <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="picture" > Picture</a>
 </body>
 </html>
