--- a/new.html
+++ b/new.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <h1 class="topheader"> The Chronicles of Amber </h1>
-  <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="blackbutton" > PICTURE</a>
+  <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="button blackbutton" > BLACK</a>
+  <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="button dangerbutton">DANGER</a>
+  <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="button successbutton">SUCCESS</a>
 </body>
 </html>
