--- a/new.html
+++ b/new.html
@@ -9,5 +9,6 @@
   <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="button blackbutton" > BLACK</a>
   <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="button dangerbutton">DANGER</a>
   <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="button successbutton">SUCCESS</a>
+  <a href="http://img1.liveinternet.ru/images/attach/c/8/99/883/99883217_92966293_75433674_amberites.jpg" class="sprite"></a>
 </body>
 </html>
