--- a/enter.html
+++ b/enter.html
@@ -13,9 +13,9 @@
         <input type="email" class="mail" name="mail" required><br>
         <input type="password" class="pas" name="pas" required>
         <input type="password" class="repas" name="repas" required>
-        <a href="" class="free">create a free account</a>
+        <input type="submit" class="button" name="submit" value="CREATE A NEW ACCOUNT">
         <hr>
-        <a href="" class="dropbox">sing in with dropbox</a>     
+        <a href="" class="button">sing in with dropbox</a>     
       </form> 
     </div>
   </div>
@@ -23,3 +23,5 @@
 </body>
 
 </html>
+
+display block делает элемент из сточного блоковым
