--- a/enter.html
+++ b/enter.html
@@ -13,9 +13,9 @@
         <input type="email" class="mail" name="mail" required><br>
         <input type="password" class="pas" name="pas" required>
         <input type="password" class="repas" name="repas" required>
-        <input type="submit" class="button" name="submit" value="CREATE A NEW ACCOUNT">
+        <input type="submit" class="button submit" name="submit" value="CREATE A NEW ACCOUNT">
         <hr>
-        <a href="" class="button">sing in with dropbox</a>     
+        <a href="" class="button dropbox">SING IN WITH DROPBOX</a>     
       </form> 
     </div>
   </div>
@@ -24,4 +24,3 @@
 
 </html>
 
-display block делает элемент из сточного блоковым
