--- a/enter.html
+++ b/enter.html
@@ -13,9 +13,9 @@
         <input type="email" class="mail" name="mail" required><br>
         <input type="password" class="pas" name="pas" required>
         <input type="password" class="repas" name="repas" required>
-        <input type="submit" class="button submit" name="submit" value="CREATE A NEW ACCOUNT">
+        <p align="center"><input type="submit" class="button submit" name="submit" value="CREATE A NEW ACCOUNT"></p>
         <hr>
-        <a href="" class="button dropbox">SING IN WITH DROPBOX</a>     
+        <p align="center"><a href="" class="button dropbox">SING IN WITH DROPBOX</a></p>    
       </form> 
     </div>
   </div>
