--- a/enter.html
+++ b/enter.html
@@ -9,10 +9,10 @@
   <div class="back">
     <div class="form">
       <form>
-        <input type="text" required class="login" name="login"><br>
-        <input type="email" class="mail" name="mail" required><br>
-        <input type="password" class="pas" name="pas" required>
-        <input type="password" class="repas" name="repas" required>
+        <input type="text" autofocus="autofocus" placeholder="Your name" required class="login" name="login"><br>
+        <input type="email" placeholder="E-mail" class="mail" name="mail" required><br>
+        <input type="password" placeholder="Password" class="pas" name="password pas" required>
+        <input type="password" placeholder="Required password" class="password repas" name="repas" required>
         <p align="center"><input type="submit" class="button submit" name="submit" value="CREATE A NEW ACCOUNT"></p>
         <hr>
         <p align="center"><a href="" class="button dropbox">SING IN WITH DROPBOX</a></p>    
