--- a/enter.html
+++ b/enter.html
@@ -9,12 +9,12 @@
   <div class="back">
     <div class="form">
       <form>
-        <input type="text" autofocus="autofocus" placeholder="Your name" required class="login" name="login"><br>
-        <input type="email" placeholder="E-mail" class="mail" name="mail" required><br>
-        <input type="password" placeholder="Password" class="pas" name="password pas" required>
-        <input type="password" placeholder="Required password" class="password repas" name="repas" required>
-        <p align="center"><input type="submit" class="button submit" name="submit" value="CREATE A NEW ACCOUNT"></p>
-        <hr>
+       <p align="center"><input type="text" autofocus="autofocus" placeholder="Your name" required class="login" name="login"></p>
+        <p align="center"><input type="email" placeholder="E-mail" class="mail" name="mail" required></p>
+        <p align="center"><input type="password" placeholder="Password" class="password pas" name="pas" required>
+        <input type="password" placeholder="Required password" class="password repas" name="repas" required></p>
+        <p align="center"><input type="submit" class="button submit" name="submit" value="CREATE A FREE ACCOUNT"></p>
+        <hr noshade width="370px" color="#C4C8CF" size="1">
         <p align="center"><a href="" class="button dropbox">SING IN WITH DROPBOX</a></p>    
       </form> 
     </div>
