--- a/enter.html
+++ b/enter.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <title>Enter</title>
   <link rel="stylesheet" type="text/css" href="enter-style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="form">
@@ -14,7 +15,7 @@
         <input type="password" placeholder="Required password" class="password repas" name="repas" required></p>
         <p align="center"><input type="submit" class="button submit" name="submit" value="CREATE A FREE ACCOUNT"></p>
         <hr noshade width="370px" color="#C4C8CF" size="1">
-        <p align="center"><a href="" class="button dropbox">SING IN WITH DROPBOX</a></p>    
+        <p align="center"><a href="" class="fa fa-dropbox button dropbox">SING IN WITH DROPBOX</a></p>    
       </form> 
     </div>
   
