--- a/enter.html
+++ b/enter.html
@@ -13,9 +13,9 @@
         <p align="center"><input type="email" placeholder="E-mail" class="mail" name="mail" required></p>
         <p align="center"><input type="password" placeholder="Password" class="password pas" name="pas" required>
         <input type="password" placeholder="Confirm password" class="password repas" name="repas" required></p>
-        <p align="center"><input type="submit" class="button submit" name="submit" value="CREATE A FREE ACCOUNT"></p>
+        <p align="center"><input type="submit" class="button submit" name="submit" value="create a free account"></p>
         <hr noshade width="370px" color="#C4C8CF" size="1">
-        <p align="center"><a href="" class="button dropbox">SING IN WITH DROPBOX</a></p>    
+        <p align="center"><a href="" class="button dropbox">sing in with dropbox</a></p>    
       </form> 
     </div>
   
