--- a/enter.html
+++ b/enter.html
@@ -14,7 +14,7 @@
         <p align="center"><input type="password" placeholder="Password" class="password pas" name="pas" required>
         <input type="password" placeholder="Confirm password" class="password repas" name="repas" required></p>
         <p align="center"><input type="submit" class="button submit" name="submit" value="create a free account"></p>
-        <hr noshade width="370px" color="#C4C8CF" size="1">
+        <hr noshade width="370px" class="hr">
         <p align="center"><a href="" class="button dropbox">sing in with dropbox</a></p>    
       </form> 
     </div>
