--- a/enter.html
+++ b/enter.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form">
       <form>
-       <p align="center" class="plogin"><input type="text" class="login" autofocus="autofocus" placeholder="Your name" required name="login"></p>
+        <div align="center" class="plogin"><div class="fa fa-user user"></div><input type="text" class="login" autofocus="autofocus" placeholder="Your name" required name="login"></div>
         <p align="center"><input type="email" placeholder="E-mail" class="mail" name="mail" required></p>
         <p align="center"><input type="password" placeholder="Password" class="password pas" name="pas" required>
         <input type="password" placeholder="Confirm password" class="password repas" name="repas" required></p>
